# Print_Severs

./: .env.example  .gitattributes  .gitignore  README.md  config.example.ini  config.ini  deploy.bat  package_release.bat  pyproject.toml  requirements.txt  start_server.bat
app/: __init__.py  config.py  dependencies.py  main.py  printer.py  queue_store.py  run_server.py  scheduler.py  schemas.py  security.py  upload_validation.py  worker.py
app/routers/: __init__.py  web.py
app/static/: styles.css  upload.js
app/templates/: index.html
scripts/: deploy.ps1  local_admin.py  package_release.ps1  start_foreground.ps1
tests/: test_config.py  test_printer.py  test_queue_store.py  test_scheduler.py  test_security.py  test_upload_routes.py  test_upload_validation.py
